--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "eslint-plugin-classnames",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "Warn and formats long classNames usage in JSX",
   "repository": {
-    "url": "https://github.com/fsubal/eslint-plugin-classnames"
+    "url": "https://github.com/layaxx/eslint-plugin-classnames"
   },
   "keywords": [
     "eslint",
     "eslintplugin",
     "eslint-plugin"
   ],
-  "author": "fsubal",
+  "author": "Yannick Lang <dev@y-lang.eu> (https://y-lang.eu)",
+  "contributors": [
+    "fsubal"
+  ],
   "main": "lib/index.js",
   "scripts": {
     "test": "mocha tests --recursive"
