--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   ],
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha tests --recursive"
+    "test": "mocha tests --recursive",
+    "prepare": "husky install"
   },
   "dependencies": {},
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@types/estree": "^0.0.49",
     "@types/estree-jsx": "^0.0.1",
     "eslint": "^7.1.0",
+    "husky": "^7.0.4",
     "mocha": "^7.2.0",
     "typescript": "^4.3.5"
   },
