--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-classnames",
-  "version": "0.4.2",
+  "version": "0.5.0",
   "description": "Warn and formats long classNames usage in JSX",
   "repository": {
     "url": "https://github.com/layaxx/eslint-plugin-classnames"
@@ -16,7 +16,8 @@
   ],
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha tests --recursive",
+    "test": "mocha tests --recursive --forbid-only",
+    "dev": "mocha tests --recursive",
     "prepare": "husky install"
   },
   "dependencies": {},
@@ -25,6 +26,7 @@
     "@types/estree": "^0.0.49",
     "@types/estree-jsx": "^0.0.1",
     "eslint": "^7.1.0",
+    "glob": "^7.2.0",
     "husky": "^7.0.4",
     "mocha": "^7.2.0",
     "typescript": "^4.3.5"
