--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "test": "nyc mocha tests --recursive --forbid-only",
     "dev": "mocha tests --recursive",
+    "lint": "eslint .",
     "prepare": "husky install"
   },
   "dependencies": {},
@@ -26,6 +27,8 @@
     "@types/estree": "^0.0.49",
     "@types/estree-jsx": "^0.0.1",
     "eslint": "^7.1.0",
+    "eslint-plugin-eslint-plugin": "^4.1.0",
+    "eslint-plugin-node": "^11.1.0",
     "glob": "^7.2.0",
     "husky": "^7.0.4",
     "mocha": "^7.2.0",
@@ -33,7 +36,7 @@
     "typescript": "^4.3.5"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": "12.x || 14.x || >= 16"
   },
   "license": "ISC"
 }
